<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintStart_toStartOf="@+id/_gLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvFilter"
                style="@style/defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="All"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/ivDropDown"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:padding="4dp"
                android:src="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="@+id/tvFilter"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvFilter" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_margin="4dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFilter" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:itemCount="3"
                tools:listitem="@layout/item_filter" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gFilterItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="rvFilter,view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/_clBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_round"
        android:backgroundTint="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintStart_toStartOf="@+id/_gLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/medium"
            android:padding="16dp"
            android:text="@string/bannerText"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:src="@drawable/img_home"
            app:layout_constraintBottom_toBottomOf="@+id/_tv"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@+id/_tv"
            app:layout_constraintTop_toTopOf="@+id/_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/_tvScan"
        style="@style/defaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ScanText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintStart_toStartOf="@+id/_gLeft" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/_cvItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ivScan"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintStart_toStartOf="@+id/_gLeft"
        app:layout_constraintTop_toBottomOf="@+id/_clBanner"
        app:strokeColor="@color/gray"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="@drawable/shape_circle"
                android:padding="16dp"
                android:src="@drawable/ic_image"
                app:layout_constraintBottom_toTopOf="@+id/_g40"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                style="@style/defaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_sn"
                android:textColor="@color/grayText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/_g40"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                style="@style/defaultText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/grayText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/_g40"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                style="@style/defaultText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/scanDescription"
                android:textAlignment="center"
                android:textColor="@color/grayText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/_g40"
                app:layout_constraintVertical_bias="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/_g40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/_gLeft"
        app:layout_constraintTop_toBottomOf="@+id/cvFilter"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="5"
        tools:listitem="@layout/item_product" />

    <ImageView
        android:id="@+id/ivScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@+id/_tvScan"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/_gRight"
        app:layout_constraintStart_toStartOf="@+id/_gLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/_gLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/_gRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="_clBanner,_tvScan,_cvItem" />
</androidx.constraintlayout.widget.ConstraintLayout>